[gd_scene load_steps=3 format=2]

[ext_resource path="res://Game/Datapacks/UI/PackVarUIs/PackVarUIBase.tscn" type="PackedScene" id=1]
[ext_resource path="res://Game/Datapacks/UI/PackVarUIs/ImageVarUI.gd" type="Script" id=2]

[node name="ImageVarUI" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="Label" type="Label" parent="." index="0"]
margin_right = 79.0
margin_bottom = 720.0
size_flags_vertical = 7
text = "Some image"
valign = 1

[node name="TextureRect" type="TextureRect" parent="." index="1"]
margin_left = 83.0
margin_right = 211.0
margin_bottom = 720.0
rect_min_size = Vector2( 128, 128 )
expand = true
stretch_mode = 6

[node name="UploadButton" type="Button" parent="." index="2"]
margin_left = 215.0
margin_right = 272.0
margin_bottom = 720.0
text = "Upload"

[node name="ClearButton" type="Button" parent="." index="3"]
margin_left = 276.0
margin_right = 320.0
margin_bottom = 720.0
text = "Clear"

[node name="Control" type="Control" parent="." index="4"]
margin_left = 324.0
margin_right = 324.0
margin_bottom = 720.0

[node name="DragDropWindowDialog" type="WindowDialog" parent="Control" index="0"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="Control/DragDropWindowDialog" index="1"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="Control/DragDropWindowDialog/VBoxContainer" index="0"]
margin_right = 54.0
margin_bottom = 696.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "Drag-and-drop your image onto this window"
align = 1
valign = 1
autowrap = true

[node name="CancelButton" type="Button" parent="Control/DragDropWindowDialog/VBoxContainer" index="1"]
margin_top = 700.0
margin_right = 54.0
margin_bottom = 720.0
text = "Cancel"

[connection signal="pressed" from="UploadButton" to="." method="_on_UploadButton_pressed"]
[connection signal="pressed" from="ClearButton" to="." method="_on_ClearButton_pressed"]
[connection signal="popup_hide" from="Control/DragDropWindowDialog" to="." method="_on_DragDropWindowDialog_popup_hide"]
[connection signal="pressed" from="Control/DragDropWindowDialog/VBoxContainer/CancelButton" to="." method="_on_CancelButton_pressed"]
